--- a/assets/css/creative.css
+++ b/assets/css/creative.css
@@ -40,10 +40,31 @@ h6 {
 
 .bg-primary {
   background-color: #955251 !important;
+  
 }
 
-.bg-dark {
-  background-color: #212529 !important;
+section.bg-junior {
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 56px);
+  background-image: url("../img/amanda_junior.jpeg");
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+section.bg-junior hr {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+section.bg-junior h1 {
+  font-size: 2rem;
+}
+
+section.bg-junior p {
+  font-weight: 300;
 }
 
 .text-faded {
@@ -177,6 +198,7 @@ header.masthead {
   background-size: cover;
 }
 
+
 header.masthead hr {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -194,6 +216,10 @@ header.masthead p {
   header.masthead p {
     font-size: 1.15rem;
   }
+
+  section.bg-junior p {
+    font-size: 1.15rem;
+  }
 }
 
 @media (min-width: 992px) {
@@ -206,10 +232,24 @@ header.masthead p {
   header.masthead h1 {
     font-size: 3rem;
   }
+
+  section.bg-junior {
+    height: 100vh;
+    min-height: 650px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  section.bg-junior h1 {
+    font-size: 3rem;
+  }
 }
 
 @media (min-width: 1200px) {
   header.masthead h1 {
+    font-size: 4rem;
+  }
+
+  section.bg-junior h1 {
     font-size: 4rem;
   }
 }
